[package]
name = "bevy_easy_ui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A declarative, fluent builder-pattern abstraction layer on top of Bevy's UI system."
repository = "https://github.com/nvetroff/bevy_easy_ui"
keywords = ["bevy", "ui", "gui", "builder"]
categories = ["gui", "interface-development", "game-development"]
readme = "README.md"
exclude = ["/target", "/assets", "**/*.rs.bk", "Cargo.lock.bak"]

[dependencies]
bevy = "0.18.1"
