[package]
name = "bevy_easy_ui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A declarative, fluent builder-pattern abstraction layer on top of Bevy's UI system."
repository = "https://github.com/nv-dev-labs/bevy_easy_ui"
keywords = ["bevy", "ui", "gui", "builder"]
categories = ["interface", "gamedev", "ui", "bevy"]
readme = "README.md"
exclude = ["/target", "/assets", "**/*.rs.bk", "Cargo.lock.bak", ".github"]
rust-version = "1.85.0"

[dependencies]
bevy = "0.18.1"
bevy_ui_text_input = "0.7.0"
