[package]
name = "bevy_easy_ui"
version = "0.1.1"
edition = "2024"
license = "MIT/Apache-2.0"
description = "A declarative, fluent builder-pattern abstraction layer on top of Bevy's UI system and Bevy UI Text Input."
repository = "https://github.com/nv-dev-labs/bevy_easy_ui"
keywords = ["bevy", "ui", "builder", "gamedev"]
categories = ["gui", "game-development"]
readme = "README.md"
exclude = ["/target", "/assets", "**/*.rs.bk", "Cargo.lock.bak", ".github"]
rust-version = "1.85.0"

[dependencies]
# Bevy widgets is experimental and can changed
bevy = { version = "0.18.1", features = ["experimental_bevy_ui_widgets"] }
bevy_ui_text_input = "0.7.0"
